kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-server
  namespace: ## Add your namespace
spec:
  selector:
    app: backend-server
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
